# ml-algorithms

./: .gitignore  LogisticRegression.py  README.md  logistic_regression.py  main.py  neural_network.py  neural_network_iris.py  neural_network_proba.py  nn.py  nn_proba.py  practice.py  proba.py  pyproject.toml  train.py  utils.py
src/: logistic_regression.py  neural_network.py  test.py
