[tool.poetry]
name = "ml-algorithms"
version = "0.1.0"
description = ""
authors = ["sjovicevic <jovicevicst@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_algorithms"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
